--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "prettier-eslint": "^12.0.0"
   }
 }
