--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,11 @@
     "airbnb-typescript",
     "airbnb/hooks",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "prettier",
+    "prettier/react",
+     "prettier/prettier",
+     "prettier/@typescript-eslint",
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -45,7 +49,7 @@
     }
   },
   "rules": {
-    "@typescript-eslint/indent": ["error", 2],
+
     "@typescript-eslint/no-this-alias": "error",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
     "@typescript-eslint/no-unused-expressions": ["error"],
