--- a/package.json
+++ b/package.json
@@ -89,9 +89,7 @@
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^3.11.0",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@types/react-redux": "^7.1.12",
     "eslint-config-prettier": "^7.0.0",
