--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,8 @@
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "prettier",
     "prettier/react",
-     "prettier/prettier",
-     "prettier/@typescript-eslint"
+    "prettier/prettier",
+    "prettier/@typescript-eslint"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -33,7 +33,10 @@
   ],
   "settings": {
     "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
     },
     "import/resolver": {
       "typescript": {
@@ -44,15 +47,22 @@
         "config": "./webpack.config.ts"
       },
       "node": {
-        "paths": ["src"]
+        "paths": [
+          "src"
+        ]
       }
     }
   },
   "rules": {
-
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
     "@typescript-eslint/no-this-alias": "error",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
-    "@typescript-eslint/no-unused-expressions": ["error"],
+    "@typescript-eslint/no-unused-expressions": [
+      "error"
+    ],
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/quotes": [
@@ -103,24 +113,34 @@
       "Undefined"
     ],
     "id-match": "error",
-    "import/order": ["error", {
-      "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-      "pathGroups": [
-        {
-          "pattern": "@/**/*.pcss",
-          "group": "index"
-        },
-        {
-          "pattern": "@/**",
-          "group": "internal"
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "@/**/*.pcss",
+            "group": "index"
+          },
+          {
+            "pattern": "@/**",
+            "group": "internal"
+          }
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": false
         }
-      ],
-      "newlines-between": "always",
-      "alphabetize": {
-        "order": "asc",
-        "caseInsensitive": false
       }
-    }],
+    ],
     "max-len": [
       "error",
       {
@@ -138,7 +158,7 @@
       "error",
       "single"
     ],
-    "dot-notation":"off",
+    "dot-notation": "off",
     "no-console": "error",
     "no-alert": "error",
     "no-var": "error",
@@ -156,12 +176,21 @@
     "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, {
-      "extensions": [".ts", ".tsx"]
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".ts",
+          ".tsx"
+        ]
       }
     ],
-    "react/jsx-fragments" : ["error", "element"],
+    "react/jsx-fragments": [
+      "error",
+      "element"
+    ],
     "react/jsx-props-no-spreading": "off",
+    "react/require-default-props": "off",
     "space-before-function-paren": [
       "error",
       {
