--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
   "dependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.12.5",
     "@types/classnames": "^2.2.10",
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/html-webpack-plugin": "^3.2.3",
+    "@types/leaflet": "^1.5.19",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack": "^4.41.22",
     "@types/webpack-bundle-analyzer": "^3.8.0",
@@ -56,21 +59,29 @@
     "css-loader": "^4.3.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-typescript": "^10.0.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
     "glob-all": "^3.2.1",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.6",
+    "leaflet": "^1.7.1",
+    "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^3.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
@@ -89,14 +100,6 @@
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@types/react-redux": "^7.1.12",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
