--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.12.5",
-    "@types/recharts": "^1.8.18",
     "@types/classnames": "^2.2.10",
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/html-webpack-plugin": "^3.2.3",
@@ -45,6 +44,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recharts": "^1.8.18",
     "@types/webpack": "^4.41.22",
     "@types/webpack-bundle-analyzer": "^3.8.0",
     "@types/webpack-dev-server": "^3.11.0",
@@ -85,6 +85,7 @@
     "react-leaflet": "^3.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-simple-keyboard": "^2.5.94",
     "react-svg-loader": "^3.0.3",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
